WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128085
Repatch code is passing the wrong args to lookupExceptionHandler
https://bugs.webkit.org/show_bug.cgi?id=128085
Summary
Repatch code is passing the wrong args to lookupExceptionHandler
Mark Lam
Reported
2014-02-02 16:11:16 PST
Fix coming.
Attachments
the patch.
(2.10 KB, patch)
2014-02-02 16:15 PST
,
Mark Lam
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2014-02-02 16:12:18 PST
Yay! Thank you!
Oliver Hunt
Comment 2
2014-02-02 16:15:17 PST
I'm not sure i'd take the time to make a layout test for this unless there's an obvious mechanism - the dom pro to
bug #127969
is clearly capable of triggering it
Mark Lam
Comment 3
2014-02-02 16:15:22 PST
Created
attachment 222944
[details]
the patch.
Oliver Hunt
Comment 4
2014-02-02 16:16:16 PST
Comment on
attachment 222944
[details]
the patch. ouch.
Mark Lam
Comment 5
2014-02-02 16:18:28 PST
Thanks. Landed in
r163274
: <
http://trac.webkit.org/r163274
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug