Repatch code is passing the wrong args to lookupExceptionHandler. <https://webkit.org/b/128085>

Reviewed by Oliver Hunt.

lookupExceptionHandler() is expecting 2 args: VM*, ExecState*.
The repatch code was only passing an ExecState*. A crash ensues.
This is now fixed.

* jit/JIT.cpp:
(JSC::JIT::privateCompileExceptionHandlers):
* jit/Repatch.cpp:
(JSC::generateProtoChainAccessStub):



Canonical link: https://commits.webkit.org/146092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163274 268f45cc-cd09-0410-ab3c-d52691b4dbfc